Phi schedule updated

--- a/I2P25S/index.html
+++ b/I2P25S/index.html
@@ -985,8 +985,6 @@ You have entered this class as a New Philosophy Student, but as you do these act
   </td>
   <td>
 	  &#9989; <strong><a href="midterm-course-review.html" target="_blank">Midterm course review</a></strong> due by 11:59<small>PM</small> (midnight).
-	  <br>
-	  &#9999;&#65039; <span id="annotation"><strong><a href="reading-topic-06.html" target="_blank">Who should I trust online?</a></strong> due by 11:59<small>PM</small> (midnight).</span>
   </td>
 </tr>
 <tr>
@@ -994,9 +992,9 @@ You have entered this class as a New Philosophy Student, but as you do these act
 	  3/3 (Mon)
   </td>
   <td bgcolor="#ddd8b3">
-	  <strong>Does Prejudice Influence Who I Trust?</strong> (Topic #7)
+	  <strong>Who Should I Trust Online?</strong>
 	  <br>
-	  Rachel McKinnon, <a href="reading-topic-07.html" target="_blank">&ldquo;Epistemic Injustice&rdquo;</a>.
+	  No reading.
   </td>
   <td bgcolor="#ddd8b3">
 	  &nbsp;
@@ -1004,27 +1002,38 @@ You have entered this class as a New Philosophy Student, but as you do these act
 </tr>
 <tr>
   <td>
+	  3/4 (Tue)
+  </td>
+  <td>
+	  &nbsp;
+  </td>
+  <td>
+	  &#9999;&#65039; <span id="annotation"><strong><a href="reading-topic-06.html" target="_blank">Who should I trust online?</a></strong> due by 11:59<small>PM</small> (midnight).</span>
+  </td>
+</tr>
+<tr>
+  <td bgcolor="#ddd8b3">
 	  3/5 (Wed)
   </td>
-  <td>
-	  <strong>Does Prejudice Influence Who I Trust?</strong>
+  <td bgcolor="#ddd8b3">
+	  <strong>Does Prejudice Influence Who I Trust?</strong> (Topic #7)
 	  <br>
-	  No reading.
+	  Rachel McKinnon, <a href="reading-topic-07.html" target="_blank">&ldquo;Epistemic Injustice&rdquo;</a>.
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &#129514; <span id="experiment"><strong><a href="experiment-04.html" target="_blank">Change making letter</a></strong> due by 11:59<small>PM</small> (midnight).</span>
   </td>
 </tr>
 <tr>
-  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
+  <td style="border-bottom:2px solid black;">
 	  3/7 (Fri)
   </td>
-  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
+  <td style="border-bottom:2px solid black;">
 	  <strong>Mailing Your Change Making Letters</strong>
 	  <br>
 	  No reading.
   </td>
-  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
+  <td style="border-bottom:2px solid black;">
 	  &#129514; <span id="experiment"><strong><a href="experiment-05.html" target="_blank">Change making letter mailed</a></strong> due in class.</span>
   </td>
 </tr>
@@ -1032,26 +1041,26 @@ You have entered this class as a New Philosophy Student, but as you do these act
 <!-- Week 8 -->
 
 <tr>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  3/9 (Sun)
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &nbsp;
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &#9999;&#65039; <span id="annotation"><strong><a href="reading-topic-07.html" target="_blank">Does prejudice influence who I trust?</a></strong> due by 11:59<small>PM</small> (midnight).</span>
   </td>
 </tr>
 <tr>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  3/10 (Mon)
   </td>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  <strong>What Is Gaslighting?</strong> (Topic #8)
 	  <br>
 	  Kate Abramson, <a href="reading-topic-08.html" target="_blank">&ldquo;Turning Up the Lights on Gaslighting&rdquo;</a>.
   </td>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  &nbsp;
   </td>
 </tr>
@@ -1067,10 +1076,10 @@ You have entered this class as a New Philosophy Student, but as you do these act
   </td>
 </tr>
 <tr>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &nbsp;
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &nbsp;
   </td>
   <td bgcolor="#9dc889">
@@ -1078,28 +1087,28 @@ You have entered this class as a New Philosophy Student, but as you do these act
   </td>
 </tr>
 <tr>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  3/12 (Wed)
   </td>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  <strong>What Is Gaslighting?</strong>
 	  <br>
 	  No reading.
   </td>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  &nbsp;
   </td>
 </tr>
 <tr>
-  <td style="border-bottom:2px solid black;">
+  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
 	  3/14 (Fri)
   </td>
-  <td style="border-bottom:2px solid black;">
+  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
 	  <strong>Organizing an Activity Discussion</strong>
 	  <br>
 	  No reading.
   </td>
-  <td style="border-bottom:2px solid black;">
+  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
 	  &#9999;&#65039; <span id="annotation"><strong><a href="reading-topic-08.html" target="_blank">What is gaslighting?</a></strong> due by 11:59<small>PM</small> (midnight).</span>
   </td>
 </tr>
