PHi schedul update

--- a/I2P25S/index.html
+++ b/I2P25S/index.html
@@ -1065,50 +1065,50 @@ You have entered this class as a New Philosophy Student, but as you do these act
   </td>
 </tr>
 <tr>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  3/11 (Tue)
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &nbsp;
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	 &#128451; <span id="professional"><strong><a href="professional-development-06.html" target="_blank">Informational interview report</a></strong> due by 11:59<small>PM</small> (midnight).</span>
   </td>
 </tr>
 <tr>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  &nbsp;
   </td>
-  <td bgcolor="#ddd8b3">
+  <td>
 	  &nbsp;
   </td>
-  <td bgcolor="#9dc889">
+  <td>
 	  <strong><a href="volunteer-05.html" target="_blank">Cause Connection</a></strong> from 11:00<small>AM</small> to 2:00<small>PM</small> (counts as 3 hours towards the <strong><a href="I2P25S-Volunteer-Activity.pdf">volunteer activity</a></strong>).
   </td>
 </tr>
 <tr>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  3/12 (Wed)
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  <strong>What Is Gaslighting?</strong>
 	  <br>
 	  No reading.
   </td>
-  <td>
+  <td bgcolor="#ddd8b3">
 	  &nbsp;
   </td>
 </tr>
 <tr>
-  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
+  <td style="border-bottom:2px solid black;">
 	  3/14 (Fri)
   </td>
-  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
+  <td style="border-bottom:2px solid black;">
 	  <strong>Organizing an Activity Discussion</strong>
 	  <br>
 	  No reading.
   </td>
-  <td bgcolor="#ddd8b3" style="border-bottom:2px solid black;">
+  <td style="border-bottom:2px solid black;">
 	  &#9999;&#65039; <span id="annotation"><strong><a href="reading-topic-08.html" target="_blank">What is gaslighting?</a></strong> due by 11:59<small>PM</small> (midnight).</span>
   </td>
 </tr>
